로고 업데이트

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     </head>
 
     <body>
-        <a href=index.html> LOGO</a>
+        <a href=index.html> <img src="나무넷 로고.png" alt="LOGO" width="200"></a>
         <a href=about.html> ABOUT</a>
         <a href=projects.html> PROJECTS</a>
         <a href=contact.html> CONTACT</a>
         <hr>
-        <h1>대학생 사회기여 실전 프로젝트 동아리</h1>
+        <h1>대학생 사회기여<br>실전 프로젝트 동아리</h1>
         
 
 
