--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href=index.html> LOGO</a>
+    <a href=index.html> <img src="나무넷 로고.png" alt="LOGO" width="200"></a>
     <a href=about.html> ABOUT</a>
     <a href=projects.html> PROJECTS</a>
     <a href=contact.html> CONTACT</a>
@@ -32,6 +32,17 @@
       <div id="고양이 사진전" class="tabcontent">
         <h3>고양이 사진전 개최</h3>
         <img src="images/고양이사진전.jpeg" alt="" width="300">
+        <table>
+          <table cellspacing ="5">
+            <tr>
+              <td>제안자</td>
+              <td>참나무</td>
+            </tr>
+            <tr>
+              <td>기간</td>
+              <td>2022.00.00-2022.00.00</td>
+            </tr>
+      </table>
       </div>
       
       <div id="한일 대학생 네트워킹 파티" class="tabcontent">
