로고 오류 업데이트

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <a href=index.html> <img src="나무넷 로고.png" alt="LOGO" width="200"></a>
+        <a href=index.html><img src="images/나무넷 로고.png" alt="LOGO" width="200"></a>
         <a href=about.html> ABOUT</a>
         <a href=projects.html> PROJECTS</a>
         <a href=contact.html> CONTACT</a>
