--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href=index.html> <img src="나무넷 로고.png" alt="LOGO" width="200"></a>
+    <a href=index.html> <img src="images/나무넷 로고.png" alt="LOGO" width="200"></a>
     <a href=about.html> ABOUT</a>
     <a href=projects.html> PROJECTS</a>
     <a href=contact.html> CONTACT</a>
